--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <h2>
 Andrey
 </h2>
-<nav>
+<nav> 
 <ul class="navigation">
-<li class="navigation-item"><a class="navigation-item__link">home</a></li>
-<li class="navigation-item"><a class="navigation-item__link">about</a></li>
-<li class="navigation-item"><a class="navigation-item__link">page</a></li>
-<li class="navigation-item"><a class="navigation-item__link">contact</a></li>
+<li class="navigation-item"><a href="#" class="navigation-item__link">home</a></li>
+<li class="navigation-item"><a href="#" class="navigation-item__link">about</a></li>
+<li class="navigation-item"><a href="#" class="navigation-item__link">page</a></li>
+<li class="navigation-item"><a href="#" class="navigation-item__link">contact</a></li>
 </ul>
 </nav>
 </header>
